completed lit review

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -1,4 +1,4 @@
-\chapter{Background}\label{ch2:background}
+\chapter{Geothermal Background}\label{ch2:background}
 
 \section{Geothermal Systems}\label{ch2:geosys}
 \subsection{Heat Origins}\label{ch2:heatorig}
@@ -278,54 +278,103 @@ Because natural drive of the brine from subsurface to surface diminishes at lowe
 \label{fig:binary_plant}
 \end{figure}
 
-\section{Cost Modeling}
+\section{Geothermal Cost Modeling}
 \label{ch2:cost_models}
 
-\subsection{Review of Approaches}
+One might argue cost estimates for future power plants could be derived from plants already in operation. After all, analog databases serves as powerful tools for deriving group estimates or empirical relationships for other complex processes like drilling wells \citep{lukawski_cost_2014, tester_future_2006}. But data-driven estimates require a reasonable amount of data to serve as constraints. Consider a list of 96 U.S.-based geothermal power plants accessed through NREL’s Geothermal Prospector \citep{nrel_geothermal_2021}. Figure \ref{fig:nrel_us_pplants} shows the results of binning the plants by conversion type, cooling type, and capacity. Adding in additional characteristics like reservoir temperature, well depth, number of wells, and pump installations, and the number of valid analogs drops to either single digits or none for any particular plant definition. No commercial EGS plants are currently in operation within the U.S., so operational EGS analogs do not exist. Geothermal production planning must therefore rely on model-based estimates. The rest of this section will focus specifically on modeling of EGS as this is the topic of the case study described in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results}.
 
-\subsection{Uncertainties}
+\begin{figure}
+\centering
+\includegraphics[width=.95\textwidth]{templates/images/Figure-NREL_US_PowerPlants.png}
+\caption[Power plants in the United States]{Count of U.S. power plants aggregated by conversion type (binary, steam, flash), cooling system (air, water), and binned plant nameplate capacity rounded to the nearest 5 MW. Data from NREL Geothermal Prospector \protect\citep{nrel_geothermal_2021}.}
+\label{fig:nrel_us_pplants}
+\end{figure}
+
+Prior to the seminal report on “The Future of EGS” \citep{tester_future_2006}, cost models for EGS followed simple approaches in determining order of magnitude estimates for a project. Investigators chose not to model accurate predictions of electricity, focusing instead on the relative impact model parameters had on the feasibility of an EGS project \citep{augustine_hydrothermal_2009}. Calculations typically reported levelized cost of electricity (LCOE). Importantly, models were able to identify optimal reservoir depths and design temperatures for a given geothermal gradient range by balancing the costs of drilling with costs for constructing the power plant \citep{tester_economic_1990}. More sophisticated models were built off of this early work.
+
+\subsection{MIT EGS\textbackslash GEOPHIRES}
+\label{ch2:geophires}
+
+The EGS model first developed by \citet{tester_economic_1990} and refined for “The Future of EGS” study \citep{tester_future_2006} became known as the MIT EGS model, a Windows application written in FORTRAN for economic analysis. In developing the code, the authors defined built-in correlations for various cost elements (e.g., drilling, plant construction, reservoir stimulation) based on empirical relationships they derived from available global data \citep{tester_future_2006}. After an additional upgrade to model direct-use geothermal and combined hear \& power (cogeneration), the application was re-branded “Geothermal Energy for the Production of Heat and Electricity Economically Simulated” or GEOPHIRES \citep{beckers_introducing_2013}. Users can perform an analysis for a power plant with EGS or optimize on the design and drilling depth for minimized LCOE. GEOPHIRES was revamped in 2019 with code refactored to Python, open source distribution, and extendibility to pair with external simulators like those for surface equipment or reservoir performance \citep{beckers_geophires_2019}. Fundamentally, GEOPHIRES operates from a deterministic set of input parameters grouped into seven categories: resource, engineering, reservoir, financial, capital costs, operations \& maintenance costs, and optimization settings \citep{beckers_introducing_2013}. Incorporating uncertainty in the modeling process requires incrementally re-parameterizing the input and running the model again. Strategic choices during the modeled lifecycle of the power plant are not supported.
+
+\subsection{GETEM}
+\label{ch2:getem}
+
+The primary alternative cost model to GEOPHIRES is the Geothermal Electric Technology Evaluation Model (GETEM), a multi-sheet spreadsheet determining LCOE for commercial geothermal power production. GETEM was created for NREL by Princeton Energy Resources International and released in 2005 as a tool for the DOE to prioritize geothermal projects and test the economic impact of technology improvements \citep{entingh_volume_2006}. GETEM offers a tremendous number of user inputs, but default values reduce user interaction to defining resource temperature, depth, and a conversion system choice of binary or flash. An upgrade in 2011 included support for EGS reservoirs \citep{eere_getem_2012}. Users can target a specific production amount for power sales or set a fixed count of production wells for the calculation \citep{mines_geothermal_2008}. The main project components include: cost for exploration, drilling and stimulation, well and reservoir management, and power plant construction and maintenance \citep{entingh_volume_2006}. The design of GETEM as an Excel-based tool makes it transparent and configurable, however casual users could find its many sheets and complex cross-references overwhelming. In addition, password protections lock down many of the sheets from full visibility or editing. As with GEOPHIRES, GETEM does not natively support probabilistic modeling or dynamic decision-making in the cost simulation.
+
+\subsection{SAM}
+\label{ch2:sam}
+NREL elected to include GETEM logic in their System Advisor Model (SAM) for multiple renewable energy systems, available both online and as a downloadable application \citep{nrel_system_2021}. SAM goes beyond LCOE for power sales to a utility, modeling both residential projects to offset electricity needs and third-party ownership arrangements \citep{blair_system_2018}. SAM is also open-source, but since the majority of the code was written in PowerBuilder and C/C++, incorporating custom logic or strategic decisions into cost calculations requires at least a moderate level of software development proficiency. Uniquely, SAM supports Monte Carlo simulation with multi-valued input variables \citep{blair_system_2018}. None of the other models reviewed here incorporate uncertainty into a geothermal economic model in this way.
+
+\subsection{CREST}
+\label{ch2:crest}
+
+On the other side of the spectrum is the Cost of Renewable Energy Spreadsheet Tool (CREST) developed in 2010 for NREL by Sustainable Energy Advantage \citep{gifford_crest_2013}. This tool targeted state policy-makers interested in crafting renewable energy policies for solar, wind, and geothermal, aiming for ease of use over heavily-parameterized solutions like GETEM \citep{gifford_renewable_2011}. Rather than diving deeply into power plant performance, the model focuses primarily on financing, market factors, taxes, and incentives. Key cost buckets include exploration, confirmation well drilling, well field and power plant construction, and operations \& maintenance \citep{gifford_crest_2013}. The spreadsheet form and standardized design makes CREST highly accessible, but the model simplifies geothermal to such a degree that conversion system or resource type are abstracted from the user. 
+
+\subsection{Cost Model Insights}
+\label{ch2:cost_model_insights}
+Several geothermal cost model options are widely-available and accessible from researchers and U.S. government sources. While they differ in target audience and capabilities, the models capture similar inputs and produce levelized cost estimates for electricity generation from hydrothermal and/or EGS reservoirs. Uncertainty is rarely accounted for in the models. Instead, the user parameterizes the resource and power generation scenario and receives a single cost estimate. Sensitivity testing or use of parameter ranges must be handled manually, and the models are incompatible with dynamic strategic decision-making over the lifetime of a field. The absence of these features defines an opportunity for a different modeling approach: one that accounts for uncertainty, allows for strategic flexibility, and has a familiar and customizable form as described in Chapter \ref{ch4:cm_prep}. 
 
 \section{Case Study: Southwest New Mexico}\label{ch2:case}
 
-The area of interest (AOI) for the geothermal exploration section of this thesis is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region is defined by the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Mogollon-Datil Volcanic Field. The unique environments presented by each province may have implications on geothermal favorability \citep{pepin_new_2018} (Figure \ref{fig:phys-provinces}).
+The area of interest (AOI) for the geothermal exploration work in chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml} is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region is defined by the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Mogollon-Datil Volcanic Field.
+
+The following is an overview of each province, followed by an in-depth look of the only active commercial power plant in NM, Lightning Dock. Cost modeling work in chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results} reference Lightning Dock as the parent facility to a proposed plant expansion project.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=.65]{Figure-Physiographic-White.pdf}
+\includegraphics[width=.85\textwidth]{Figure-Physiographic-White.pdf}
 \caption[Physiographic provinces of southwest New Mexico]{Physiographic provinces within the southwest New Mexico study area. Thick black line defines the AOI. Thinner black lines outline the province boundaries. County boundaries shown in light white lines. Plot data from \protect\citep[~Figure 2-2]{bielicki_hydrogeolgic_2015}.}
 \label{fig:phys-provinces}
 \end{figure}
 
-\subsubsection{Basin and Range}
+\subsection{Basin and Range}
 
 Plate tectonic activity along the western edge of the United States transitioned $\approx$30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and subduction of the Juan de Fuca plate off of the Pacific Northwest \citep[p.\ 81]{fowler_solid_2005}. This transition created a broad extensional regime in the Southwest U.S. and into Mexico believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out with depth, creating asymmetric graben structures \citep[p.\ 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}.
 
-\subsubsection{Rio Grande Rift}
+\subsection{Rio Grande Rift}
 
 Even greater extension was experienced within the \acrlong{rgr} (\acrshort{rgr}) province, a $\approx$1000 km long zone separating the Great Plains to the east and Colorado Plateau to the west. Rifting occurred in at least three stages; initiation began $\approx$36 Ma, extension rapidly increased $\approx$28 Ma as part of the BR formation, and then more localized thinning took place between $\approx$10-3 Ma \citep{bielicki_hydrogeolgic_2015,mack_geology_2008,seager_new_1984}. Basins chained along the rift show an alternating asymmetry, with transfer faults and accommodation zones separating successive basins. The faults that bound these basins and define the complex transfer zones could create favorable structural settings for geothermal systems \citep{faulds_favorable_2015}. Very high heat flow measurements suggest geothermal gradients that, upon extrapolation, would exceed the solidus at the crust-mantle boundary \citep{olsen_rio_1987}. This could be explained by a thermal anomaly and asthenospheric convection beneath the rift center \citep{olsen_rio_1987}. Additionally, seismic and gravity data show crustal thinning to $\approx$30 km, with even greater thinning to the south \citep{keller_rio_1999}. In summary, geologic and geophysical observations collectively support an increased likelihood of the heat and permeability risk elements being met in the RGR province. 
 
-\subsubsection{Colorado Plateau}
+\subsection{Colorado Plateau}
 
 The \acrlong{cp} (\acrshort{cp}) province presents a very different geologic picture, one of stability and lack of significant deformation for around 600 MY \citep{leighty_neogene_1997}. Uplift of the Colorado Plateau took place over several different phases, beginning with the Laramide orogeny (80-40 Ma) responsible for the Rocky Mountains, and totaling more than 2 km relative to sea level based on exposed outcrops \citep{moucha_deep_2009}. Unlike the surrounding provinces, the CP acted as a cohesive block and still maintains a significantly greater crustal thickness ($\approx$45 km) compared to the BR or RGR \citep{wilson_imaging_2005}. Recent models suggest CP uplift continues as complex replacement interactions between the denser brittle lithosphere and more buoyant underlying asthenosphere take place \citep{levander_continuing_2011}, yet lower heat flow values compared to the surrounding provinces \citep{thompson_regional_1979} suggest these crust-mantle dynamics have little effect on CP geothermal potential.
 
-\subsubsection{Mogollon-Datil Volcanic Field}
+\subsection{Mogollon-Datil Volcanic Field}
 
 On the western side of the AOI is the \acrlong{mdvf} (\acrshort{mdvf}), a 15,000 square mile outpouring of rhyolitic flows as part of a super-eruptive episode in western New Mexico that preceded rifting in the RGR province \citep{keller_rio_1999}. The timing indicates the thermal source for the MDVF magmas likely originated from a Farallon subduction-related event rather than onset of extension, and extrusive activity only represents a fraction of the total magma volume in the underlying composite pluton \citep{olsen_rio_1987,schneider_crustal_1994}. MDVF is just one of several Late Eocene-Oligocene volcanic fields in a chain from Colorado though to central Mexico, and isotopic dating defines four pulses of surface activity beginning 36 Ma near Las Cruces, NM and ending conclusively 24 Ma after a general westward migration \citep{mcintosh_time-stratigraphic_1992}. Lack of consistent trends in current heat flow measurements across the field match the heterogeneous distribution of volcanic features and extrusive volumes \citep{mcintosh_time-stratigraphic_1992}, although some evidence suggests greater water availability and geothermometry measurements make MDVF worth considering for geothermal exploration \citep{pepin_new_2018}.
 
 \subsection{Lightning Dock} 
 \label{ch2:lightning_dock}
 
-\begin{wrapfigure}{R}{0.65\linewidth}%[!htp]
+Present-day commercial geo-thermal activity in New Mexico is limited to a single hydrothermal power plant in Hidalgo County, which defines the boot heel in the southwestern corner of the state (Figure \ref{fig:lightning_dock_map}). The power plant, traditionally known as Lightning Dock and recently renamed the Dale Burgett Geothermal Facility, sits atop a known geothermal resource area documented by the USGS in 1974 \citep{dahal_evaluation_2012}, around twenty (20) miles southwest of Lordsburg, NM. Although the hydrothermal resource was originally blind, boiling water was encountered in 1948 by drilling operations for water wells \citep{elston_geology_1983}. Commercial use of the resource dates back to 1977 to support greenhouse facilities and later, in the 1990s, for aquaculture \citep{crowell_history_2014}. Power production commenced in 2013 under the ownership of Cyrq Energy with a 4 MW air-cooled binary cycle power plant composed of four power blocks \citep{goodman_lightning_2013}. \acrlong{pnm} (\acrshort{pnm}) signed a long-term \acrlong{ppa} (\acrshort{ppa}) for the generated electricity \citep{dahal_evaluation_2012}, as encouraged by the New Mexico \acrlong{rps} (\acrshort{rps}) carve-out for 5\% non-wind, non-solar renewable technologies \citep{dsire_dsire_2021}. Lightning Dock was fully revamped in 2018 by Turboden to its present 11.2 MW (net) single-turbine binary cycle architecture \citep{bonafin_repowering_2019}. The 20-year PPA with PNM was reset and secures power sales through 2038 \citep{oconnell_matter_2018}.
+
+\begin{figure}%{R}{0.65\linewidth}
 \centering
-\includegraphics[scale=0.6]{templates/images/Figure-Lightning_Dock_Location_composite.png}
+\includegraphics[width=.85\textwidth]{templates/images/Figure-Lightning_Dock_Location_composite.png}
 \caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml} of this thesis. Map created using Google Earth.}
 \label{fig:lightning_dock_map}
-\end{wrapfigure}
-
-Present-day commercial geo-thermal activity in New Mexico is limited to a single hydrothermal power plant in Hidalgo County, which defines the boot heel in the southwestern corner of the state (Figure \ref{fig:lightning_dock_map}). The power plant, traditionally known as Lightning Dock and recently renamed the Dale Burgett Geothermal Facility, sits atop a known geothermal resource area documented by the USGS in 1974 \citep{dahal_evaluation_2012}, around twenty (20) miles southwest of Lordsburg, NM. Although the hydrothermal resource was originally blind, boiling water was encountered in 1948 by drilling operations for water wells \citep{elston_geology_1983}. Commercial use of the resource dates back to 1977 to support greenhouse facilities and later, in the 1990s, for aquaculture \citep{crowell_history_2014}. Power production commenced in 2013 under the ownership of Cyrq Energy with a 4 MW air-cooled binary cycle power plant composed of four power blocks \citep{goodman_lightning_2013}. \acrlong{pnm} (\acrshort{pnm}) signed a long-term \acrlong{ppa} (\acrshort{ppa}) for the generated electricity \citep{dahal_evaluation_2012}, as encouraged by the New Mexico \acrlong{rps} (\acrshort{rps}) carve-out for 5\% non-wind, non-solar renewable technologies \citep{dsire_dsire_2021}. Lightning Dock was fully revamped in 2018 by Turboden to its present 11.2 MW (net) single-turbine binary cycle architecture \citep{bonafin_repowering_2019}. The 20-year PPA with PNM was reset and secures power sales through 2038 \citep{oconnell_matter_2018}.
+\end{figure}
 
 The Lightning Dock facility is found on the eastern side of the Animas Valley, which lies at the northern extent of the Mexican Highland in the eastern Basin and Range province (BR) \citep{cunniff_final_2005}. The bounding mountain ranges are the Pyramid Mountains to the east and Pelocillo Mountains to the west (Figure \ref{fig:lightning_dock_map}). As is typical for the BR, this surface geography is diagnostic of a fault-bounded graben architecture. Lightning Dock leverages the bounding Animas Valley fault to access deep-sourced hydrothermal waters for power production. Interestingly, this fault ties to the ring fracture zone of a 20-km wide Oligocene volcanic feature known as Muir Cauldron \citep{elston_geology_1983}. The exact heat source responsible for hydrothermal activity remains in question, but geochemical analysis suggests circulation of 250$^\circ$C waters from depths of 6-8 km \citep{schochet_development_2001}. These fluids upwell within the fault zone and intermingle with cool groundwater fed by runoff from the neighboring highlands, creating the lower-temperature brine at 150-170$^\circ$C targeted by Lightning Dock \citep{crowell_history_2014}.
 
 Prior to the construction of Lightning Dock, \citet{schochet_development_2001} submitted a proposed development plan for a hybrid hydrothermal-EGS project to the DOE. Similar to the Lightning Dock design, hydrothermal fluids would be produced from shallow depths (<1 km). In addition, the $\approx$600 m thick Horquilla Limestone formation could be treated as an EGS reservoir to supplement the hydrothermal power production and serve as a proof of concept for commercial EGS \citep{schochet_development_2001}. The proposal provided a cost analysis for two possible power plant sizes using most-likely values for variables and a single deterministic estimate of total plant and field cost \citep[Table 3]{schochet_development_2001}. Although the proposal was never executed, the concept of combining the Lightning Dock power plant with an EGS expansion is an intriguing modern-day extension of Schochet and Cunniff’s vision. However, such a project would come with many financial risks tied to operations, resource management, and external market factors. This thesis considers how that risk might be mitigated through cost modeling that accounts for uncertainty in the model parameters and the potential for just-in-time strategic decision-making. Such an approach goes beyond the cost models described in Section \ref{ch2:cost_models} and the simple cost analysis performed by \citet{schochet_development_2001}, treating the project as a system with its own dynamics and emergent financial results.
 
 \section{Recap}
+
+This chapter provided relevant background information and a review of the current literature on the topics of geothermal energy, geothermal exploration, and geothermal cost modeling.
+\\
+\\
+Key insights from this chapter include:
+\begin{enumerate}
+    \item Geothermal energy exists everywhere around the world, primarily from accretionary heat and radioactive decay.
+    \item Conventional geothermal or hydrothermal systems consist of a heat source, permeability, circulating fluids, a top seal, and source of fluid recharge.
+    \item Enhanced Geothermal Systems require artificial creation of permeability and/or fluid circulation to capture subsurface heat.
+    \item Geothermal exploration historically relies on surface expressions of hydrothermal activity, geochemical, and geophysical measurements.
+    \item Play Fairway Analysis integrates observations and measurements related to key geothermal risk elements into an overall map of geothermal favorability.
+    \item An opportunity exists to apply supervised and unsupervised machine learning methods to geothermal exploration. Existing approaches have under-explored the influence of uncertainties on model prediction and reliability.
+    \item Geothermal power plant conversion types include high-temperature resource steam plants; moderate to high-temperature resource flash plants, and low to moderate-temperature resource binary cycle plants. 
+    \item Existing geothermal economic models typically estimate costs for a resource and power plant scenario. An opportunity remains to combine management of variable uncertainties, dynamic decision-making, and deployment using an open and adaptable UX design.
+    \item Southwest New Mexico consists of four unique physiographic provinces that have been well-studied in the past. This is the chosen study area for testing geothermal exploration risk mitigation strategies in Chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml}.
+    \item Lightning Dock, a USGS-designated KGRA and active hydrothermal power plant, lies within the Southwest New Mexico study area. This is the selected area for testing risk mitigation with cost models in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results}.
+\end{enumerate}
