--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -1,4 +1,4 @@
-\chapter{Machine Learning Exploration Model Preparation}\label{ch3:expl_prep}
+\chapter{Machine Learning in Geothermal Exploration}\label{ch3:expl_prep}
 
 \section{Data Sources}\label{ch3:expl_data_src}
 
