--- a/templates/chap5.tex
+++ b/templates/chap5.tex
@@ -1,4 +1,4 @@
-\chapter{Exploration Models}\label{ch5:expl_ml}
+\chapter{Machine Learning in Geothermal Exploration Results}\label{ch5:expl_ml}
 
 \section{Data Modeling}
 
