--- a/templates/chap6.tex
+++ b/templates/chap6.tex
@@ -1,4 +1,4 @@
-\chapter{Power Plant Cost Model Results}\label{ch6:cm_results}
+\chapter{Power Plant Expansion Cost Model Results}\label{ch6:cm_results}
 
 Chapter \ref{ch4:cm_prep} outlined the cost modeling strategy for a hypothetical 5 MW expansion project of the Lightning Dock power plant in Animas Valley, NM. This chapter reviews the results of the different model approaches, explores insights gained from those models, and describes how this approach mitigates risks associated with geothermal production.
 
@@ -142,7 +142,7 @@ Standard deviation of the ensemble distribution is less than observed for the Ba
 \label{fig:redevelop_case_cdf}
 \end{figure}
 
-As a brief caveat: the idea of periodic redevelopment for a geothermal field is not novel. In fact, many geothermal cost models include it as default behavior \citep[e.g.,\ ][]{entingh_volume_2006, freeman_system_2018}. Nevertheless, the analysis above illustrates why this design option should be included in geothermal operations to help mitigate the risk of high thermal drawdown rates --- as long as drilling costs are low enough to make it attractive. 
+As a brief caveat: the idea of periodic redevelopment for a geothermal field is not novel. In fact, many geothermal cost models include it as default behavior \citep[e.g.,\ ][]{entingh_volume_2006, blair_system_2018}. Nevertheless, the analysis above illustrates why this design option should be included in geothermal operations to help mitigate the risk of high thermal drawdown rates --- as long as drilling costs are low enough to make it attractive. 
 
 \subsection{Summary Statistics}
 \label{ch6:redevelop_stats}
